[gd_scene load_steps=10 format=3 uid="uid://k082tw417vme"]

[ext_resource type="Script" uid="uid://d01sn0enqr14t" path="res://code stuff/Main/setting.gd" id="1_xxxxx"]
[ext_resource type="FontFile" uid="uid://bm5o7wdxohasl" path="res://Other/Tiny5-Regular.ttf" id="2_x0ggx"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_x0ggx"]
color = Color(0.12549, 0.572549, 0.682353, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_y2ue3"]
color = Color(0.12549, 0.572549, 0.682353, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_4yhbh"]
color = Color(0.12549, 0.572549, 0.682353, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y2ue3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4yhbh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.12549, 0.572549, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7oyg"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.12549, 0.572549, 0.682353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqsny"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.12549, 0.572549, 0.682353, 0.47451)

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xxxxx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.113725, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x0ggx")
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5
theme_override_styles/separator = SubResource("StyleBoxLine_x0ggx")

[node name="MasterVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_x0ggx")
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_y2ue3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_x0ggx")
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_y2ue3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_x0ggx")
theme_override_font_sizes/font_size = 32
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/slider = SubResource("StyleBoxLine_y2ue3")
max_value = 1.0
step = 0.01
value = 1.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_4yhbh")

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x0ggx")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_y2ue3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_m7oyg")
theme_override_styles/hover = SubResource("StyleBoxFlat_pqsny")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_4yhbh")
text = "BACK"

[node name="EndButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x0ggx")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxEmpty_y2ue3")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_m7oyg")
theme_override_styles/hover = SubResource("StyleBoxFlat_pqsny")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_4yhbh")
theme_override_styles/normal = SubResource("StyleBoxFlat_4yhbh")
text = "END GAME"

[node name="EndGameDialog" type="ConfirmationDialog" parent="."]
title = "Confirm Exit"
initial_position = 2
size = Vector2i(500, 200)
dialog_text = "Are you sure you want to end the game?"

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/EndButton" to="." method="_on_end_button_pressed"]
[connection signal="confirmed" from="EndGameDialog" to="." method="_on_end_game_confirmed"]
